# botty

./: .gitignore  LICENSE  README.md
whatsapp-bot/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml  start.sh
whatsapp-bot/.learnings/: feat--whatsapp-audio-transcribe.md
whatsapp-bot/src/: config.py  main.py
whatsapp-bot/src/core/: dependencies.py  exceptions.py  logging.py
whatsapp-bot/src/routes/: health.py  webhook.py
whatsapp-bot/src/services/: audio.py  base.py  messaging.py  transcription.py
whatsapp-bot/src/taskqueue/: __init__.py  manager.py
whatsapp-bot/src/workers/: __init__.py  settings.py  tasks.py
